# slack-agent

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW_GUIDE.md  README.md  pyproject.toml
src/slack_agent/: __init__.py  agent.py  agent.py.exp.md  bot.py  bot.py.exp.md  config.py  config.py.exp.md  text.py  text.py.exp.md
src/slack_agent/handlers/: __init__.py  message.py  message.py.exp.md
src/slack_agent/mcp/: semche.py  semche.py.exp.md
src/slack_agent/tools/: semche.py  semche.py.exp.md
story/: MCPツール自動ロード拡張.md  SlackボットのエージェントはSemche MCPを利用できる.md  エージェントがsemch_searchを使用してくれないのを改善.md  エージェントはセッションをプロセス中ずっと開いたままにする.md  エージェントは回答する前に「:eyes:」で質問メッセージにリアクションする.md  エージェントは返信欄の会話履歴を把握できる.md  ユーザーはSlackでBotにメッセージを送信できる.md  ユーザーはSlackボットを通じてGithubCopilotに質問できる.md
tests/: test_agent.py  test_mcp_autoload.py  test_mcp_singleton.py  test_message_reaction.py  test_semche_mcp.py  test_semche_policy.py  test_text.py  test_tools_semche.py
