[project]
name = "slack-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "patera", email = "pater4.1127+patera@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
slack-agent = "slack_agent:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
